Scrollable mail text, bugfix duplicates addresses